tests/ui/transmutability/inconsistent-is-transmutable.next.stderr
error[E0308]: mismatched types
  --> $DIR/inconsistent-is-transmutable.rs:27:74
   |
LL |         const FALSE: bool = assert::is_transmutable::<Src, Dst, Context, {}>();
   |                                                                          ^^ expected `Assume`, found `()`

error[E0308]: mismatched types
  --> $DIR/inconsistent-is-transmutable.rs:27:29
   |
LL |         const FALSE: bool = assert::is_transmutable::<Src, Dst, Context, {}>();
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
